# ai-ops-agentic-platform

./: .coverage  .dependencies.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Todos.md  VERIFICATION.txt  docker-compose.yml  main.py  pom.xml  pyproject.toml  qa_test_alembic_setup.py  qa_test_color_system.py  requirements.txt  settings.gradle.kts  start.sh  test_config_loading.py  verify_phase11_decoupling.py
aiops-app/: .npmrc  Dockerfile  SPEC.md  next.config.ts  package-lock.json  package.json
aiops-contract/: SPEC.md
app/: config.py  middleware.py  scheduler.py
deploy/: .env.aiops-app.template  .env.backend.template  .env.ontology.template  README-java.md  aiops-app.service  aiops-disk-clean.cron  aiops-java-api.env.example  aiops-java-api.service  aiops-java-scheduler.env.example  aiops-java-scheduler.service  aiops-mcp.service  aiops-python-sidecar.env.example  aiops-python-sidecar.service  disk-clean.sh  docker-compose.yml  fastapi-backend.service  java-update.sh  nginx.conf  ontology-simulator.service  set-anthropic-key.sh  setup.sh  update.sh
docs/: AGENT_ARCHITECTURE_SHARING.pptx  AGENT_CONSOLE_DESIGN_BRIEF.md  AGENT_CONSOLE_MOCKUP.html  AGENT_CONSOLE_TEST_REPORT.html  AGENT_HARNESS_DESIGN.html  AGENT_OPERATIONS_FLOW.html  AGENT_TRACE_UI_PROPOSAL.html  AIOPS_ROADMAP.md  BLOCKS.md  CHART_STYLE_SPEC_VISUAL.html  CHAT_AGENT_LOOP_SPEC.md  LLM_BAKEOFF_4MODEL.html  LLM_BAKEOFF_4MODEL.pptx  LLM_BAKEOFF_KIMI_vs_GLM.html  LLM_BAKEOFF_SONNET5_vs_OPUS48.html  LLM_CHANNEL_CONFIG_GUIDE.html  MODEL_PERF_ANALYSIS_2026_07.html  MULTI_AGENT_ACTIVITY_UI_SPEC.md  MULTI_AGENT_ARCHITECTURE.html  MULTI_AGENT_INTRO.pptx  MULTI_AGENT_MEMORY_SPEC.md  MULTI_AGENT_OBSERVABILITY_SPEC.md  MULTI_AGENT_PHASE0_SPEC.md  MULTI_AGENT_PHASE1_SPEC.md  MULTI_AGENT_PROGRESS.html  PHASE_8_A_RUNBOOK.md  PIPELINE_BUILDER_LLM_vs_COWORK.pptx  PLATFORM_OVERVIEW_2026H2.html  PLATFORM_OVERVIEW_2026H2.pptx  POC_DEPLOYMENT_SPEC.html  POC_DEPLOYMENT_SPEC.md  POC_HANDOFF_FOR_AGENT.md  POC_HANDOVER_PLAN.html  POC_LOCAL_SETUP.md  PROJECT_HANDOFF.md  (+44 more)
(+1864 files in other folders)
